# CCO-Diagrams

./: .gitignore  Makefile  README.md  run_parser_tests.sh  stack-makefile  stack.yaml  tdiagrams.cabal
report/: latexgen.tex  main.tex  typechecking.tex
src/: ParseTDiag.hs  PpPicture.hs  TDiag2Picture.hs  TypeCheckTDiag.hs
src/CCO/: D2P.hs  Diag.hs  Picture.hs
src/CCO/Diag/: AG.ag  Base.hs  Lexer.hs  Parser.hs  TypeChecking.hs
src/CCO/Diag/AG/: Base.ag  Semantics.ag  TPicture.ag  TypeChecking.ag
src/CCO/Picture/: AG.ag
src/CCO/Picture/AG/: Base.ag  Printing.ag
test/: Spec.hs
test/basic/: fail3a.diag  fail4b.diag  fail5a.diag  fail5b.diag  test2.diag  test3.diag  test5.diag  test6b.diag  test6c.diag  test7.diag
test/bindings/: fail1b.diag  fail2a.diag  test1.diag  test2.diag
test/parser/: fail10a.diag  fail4a.diag  fail4b.diag  fail4c.diag  fail5a.diag  fail5b.diag  fail5c.diag  fail6a.diag  test1.diag  test10.diag  test11a.diag  test4.diag  test5.diag  test6.diag  test7.diag  test8.diag  test9.diag
test/signatures/: fail1b.diag
