name:                  tdiagrams
version:               0.0.5.0
synopsis:              Utilities for drawing T-diagrams in LaTeX
description:           Solution for Mini Project B of the course on
                       Compiler Construction (INFOMCCO) at Utrecht University.
license:               AllRightsReserved
license-file:          LICENSE
category:              Compilers/Interpreters
copyright:             (c) 2008-2014 Utrecht University, (c) 2017 Wout Elsinghorst, Xander van der Goot
author:                Stefan Holdermans, Wout Elsinghorst, Xander van der Goot
maintainer:            Stefan Holdermans <stefan@cs.uu.nl>
stability:             provisional
homepage:              http://www.cs.uu.nl/wiki/Cco/MiniProjects
tested-with:           GHC == 6.8.2, GHC == 6.8.3, GHC == 6.10.1, GHC == 8.0.2
build-type:            Simple
cabal-version:         >= 1.8
extra-source-files:    AUTHORS, Makefile, src/CCO/Diag/AG.ag,
                       src/CCO/Diag/AG/Base.ag, src/CCO/Picture/AG.ag,
                       src/CCO/Picture/AG/Base.ag,
                       src/CCO/Diag/AG/Semantics.ag,
                       src/CCO/Diag/AG/TypeChecking.ag,
                       src/CCO/Diag/AG/TPicture.ag,
                       src/CCO/Picture/AG/Printing.ag

  
executable parse-tdiag
  main-is:             ParseTDiag.hs
  build-depends:       base, uu-cco >= 0.1.0.1, containers, linear, lens, uuagc, vector
  other-modules:       CCO.Diag, CCO.Diag.AG, CCO.Diag.Base, CCO.Diag.Lexer,
                       CCO.Diag.Parser, CCO.Picture, CCO.Picture.AG
  hs-source-dirs:      src

executable tc-tdiag
  main-is:             TypeCheckTDiag.hs
  build-depends:       base, uu-cco >= 0.1.0.1, containers, linear, lens, uuagc, vector
  other-modules:       CCO.Diag, CCO.Diag.AG, CCO.Diag.Base, CCO.Diag.Lexer,
                       CCO.Diag.Parser, CCO.Diag.TypeChecking, CCO.Picture, CCO.Picture.AG
  hs-source-dirs:      src
  
executable tdiag2picture
  main-is:             TDiag2Picture.hs
  build-depends:       base, uu-cco >= 0.1.0.1, uuagc >= 0.9.52.0, linear, lens, vector
  other-modules:       CCO.Diag, CCO.Diag.AG, CCO.Diag.Base, CCO.Diag.Lexer,
                       CCO.Diag.Parser, CCO.Picture.AG, CCO.Picture, CCO.D2P
  hs-source-dirs:      src
  
executable pp-picture
  main-is:             PpPicture.hs
  build-depends:       base, uu-cco >= 0.1.0.1, containers, linear, lens, uuagc, vector
  other-modules:       CCO.Picture, CCO.Picture.AG
  hs-source-dirs:      src

test-suite spec
  type:  exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test, src
  other-modules: CCO.D2P, CCO.Diag.AG, CCO.Diag.Base, CCO.Picture, CCO.Picture.AG
  build-depends:      base, hspec, uu-cco, parsec, split, process, linear, lens, vector
